Add Tailwind PurgeCSS fix dev, break everything

--- a/content/news/2019-06-19-01.md
+++ b/content/news/2019-06-19-01.md
@@ -1,5 +1,5 @@
-It's Freezing In Here!
----
+## It's Freezing In Here!
+
 _19 June 2019_
 
 Edit: Actually, I realize freezing the tick rate for EVERYONE is unfair if you're under 100 gold - you'll never be able to train a unit. As such, I've amended the algorithm to only affect those with gold equal to or higher than 100.
