--- a/content/news/2019-06-29-01.md
+++ b/content/news/2019-06-29-01.md
@@ -1,5 +1,5 @@
-Wow The Gold Really Shot Up
----
+## Wow The Gold Really Shot Up
+
 _29 June 2019_
 
 The gold tick has been adjusted again, and will automatically go into "semi-freeze" mode when it's above 140 average.
