--- a/content/news/2019-06-23-01.md
+++ b/content/news/2019-06-23-01.md
@@ -1,5 +1,5 @@
-Time For A Thaw
----
+## Time For A Thaw
+
 _23 June 2019_
 
 I've unfrozen the gold tick, since the supply dropped enough to keep it even. This "drain mode" is still coded in, but needs to be activated manually by tweaking the code. For now, that's fine. I've also adjusted the default tick rates to 10, 20, 30 and 60 minutes based on the global gold supply.
